generated/manifests/prod-axon/longhorn/CiliumNetworkPolicy-allow-kube-apiserver-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  name: allow-kube-apiserver-egress
  namespace: longhorn-system
spec:
  description: Allow Longhorn pods to talk to kube-apiserver.
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: longhorn-system
